--- a/index.html
+++ b/index.html
@@ -82,12 +82,32 @@
                     <!-- <a href="https://youtu.be/7h3SZ3La-oA">Video</a> -->
                 </p>
             </div>
-            <!-- <div>
-                <p>* indicates equal contribution</p>
-            </div> -->
+            <div>
+                <a href="https://arxiv.org/abs/2402.09564" style="height: 14em;" class="research-thumb">
+                    <video width="320" height="auto" autoplay loop muted>
+                        <source src="assets/images/tactile.mp4" type="video/mp4">
+                    </video>
+                </a>
+                <a href="https://arxiv.org/abs/2402.09564" class="research-proj-title">
+                    Tactile-Informed Action Primitives Mitigate Jamming in Dense Clutter
+                </a>
+                <p>
+                    <a style="color:#000;" href="https://bdml.stanford.edu/pmwiki/pmwiki.php/Profiles/DaneBrouwer">Dane Brouwer</a>,
+                    <b>Joshua Citron</b>,
+                    <a style="color:#000;" href="https://www.hojungchoi.com/">Hojung Choi</a>,
+                    <a style="color:#000;" href="https://marionlepert.github.io/">Marion Lepert</a>,
+                    <a style="color:#000;" href="https://bdml.stanford.edu/pmwiki/pmwiki.php/Profiles/MichaelLin">Michael Lin</a>,
+                    <br>
+                    <a style="color:#000;" href="https://web.stanford.edu/~bohg/">Jeannette Bohg</a>
+                    <a style="color:#000;" href="https://profiles.stanford.edu/mark-cutkosky">Mark Cutkosky</a>
 
-            <div style="clear: both;"></div>
-        </div>
+
+                    <a href="https://github.com/danebrouwer/clutter-jamming">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="https://arxiv.org/abs/2402.09564">ArXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <!-- &nbsp;&nbsp;&bull;&nbsp;&nbsp; -->
+                    <!-- <a href="https://youtu.be/7h3SZ3La-oA">Video</a> -->
+                </p>
+            
         <!-- <div class="divider"></div>
         <div style="display:flex;flex-direction: column;">
             <h1>Projects</h1>
