Changed formatting and picture

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 
                     <a href="https://github.com/danebrouwer/clutter-jamming">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                    <a href="https://arxiv.org/abs/2402.09564">ArXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="https://arxiv.org/abs/2402.09564">ArXiv</a>&nbsp;&nbsp;&nbsp;&nbsp;
                     <!-- &nbsp;&nbsp;&bull;&nbsp;&nbsp; -->
                     <!-- <a href="https://youtu.be/7h3SZ3La-oA">Video</a> -->
                 </p>
@@ -103,7 +103,7 @@
 
 
                     <a href="https://github.com/danebrouwer/clutter-jamming">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                    <a href="https://arxiv.org/abs/2402.09564">ArXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="https://arxiv.org/abs/2402.09564">ArXiv</a>&nbsp;&nbsp;&nbsp;&nbsp;
                     <!-- &nbsp;&nbsp;&bull;&nbsp;&nbsp; -->
                     <!-- <a href="https://youtu.be/7h3SZ3La-oA">Video</a> -->
                 </p>
