--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </header>
         <div id="profile">
             <div id="profile-pic">
-                <img src="assets/images/profile.jpeg" />
+                <img src="assets/images/profile.png" />
             </div>
             <div id="profile-intro">
                 <div id="profile-name">Joshua Citron</div>
@@ -95,7 +95,7 @@
                     <a style="color:#000;" href="https://www.hojungchoi.com/">Hojung Choi</a>,
                     <a style="color:#000;" href="https://marionlepert.github.io/">Marion Lepert</a>,
                     <a style="color:#000;" href="https://bdml.stanford.edu/pmwiki/pmwiki.php/Profiles/MichaelLin">Michael Lin</a>,
-                    <a style="color:#000;" href="https://web.stanford.edu/~bohg/">Jeannette Bohg</a>
+                    <a style="color:#000;" href="https://web.stanford.edu/~bohg/">Jeannette Bohg</a>,
                     <a style="color:#000;" href="https://profiles.stanford.edu/mark-cutkosky">Mark Cutkosky</a>
                     <br>
                     <a href="https://github.com/danebrouwer/clutter-jamming">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
