--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
                 <div id="profile-name">Joshua Citron</div>
                 <div id="profile-email">jcitron at stanford dot edu</div>
                 <p>
-                    I'm a Computer Science Master's student at Stanford University, working in the <a href="https://real.stanford.edu/">REAL Lab</a> as well as 
-                    the Biomimetics and Dexterous Manipulation Laboratory (<a href="https://bdml.stanford.edu/pmwiki/pmwiki.php/Main/HomePage">BDML</a>). I am interested 
+                    I'm a Computer Science Master's student at Stanford University, working in the <a
+                        href="https://real.stanford.edu/">REAL Lab</a> as well as
+                    the Biomimetics and Dexterous Manipulation Laboratory (<a
+                        href="https://bdml.stanford.edu/pmwiki/pmwiki.php/Main/HomePage">BDML</a>). I am interested
                     in enabling robots to move intelligently.
                 </p>
                 <!-- <p>
@@ -35,7 +37,7 @@
                 </p> -->
                 <div>
                     <a href="assets/files/cv.pdf">
-                      CV
+                        CV
                     </a>
                     /
                     <a href="https://github.com/citronCode">
@@ -49,7 +51,10 @@
         <div class="section" id="updates">
             <h1>Updates</h1>
             <ul>
-                <li> <b>January 2025</b> I began working at the <a href="https://real.stanford.edu/">REAL Lab</a> at Stanford
+                <li> <b>November 2025</b> <a href="https://arxiv.org/abs/2508.19476">Gentle Object Retraction in Dense
+                        Clutter Using Multimodal Force Sensing and Imitation Learning</a> accepted to RA-L!
+                <li> <b>January 2025</b> I began working at the <a href="https://real.stanford.edu/">REAL Lab</a> at
+                    Stanford
                 <li> <b>August 2024</b> Extended abstract accepted to ICRA@40
                 <li> <b>May 2024</b> Accepted to Computer Science coterminal degree program at Stanford!
                 <li> <b>January 2024</b> Paper accepted to ICRA 2024
@@ -61,16 +66,20 @@
         <div style="display:flex;flex-direction: column;" id="research">
             <h1>Research</h1>
             <div>
-                <a href="https://bdml.stanford.edu/uploads/Main/MobileManipulationPubs/ICRA40_FinalSubmission_Preprint.pdf" style="height: 14em;" class="research-thumb">
+                <a href="https://bdml.stanford.edu/uploads/Main/MobileManipulationPubs/ICRA40_FinalSubmission_Preprint.pdf"
+                    style="height: 14em;" class="research-thumb">
                     <video width="320" height="auto" autoplay loop muted>
                         <source src="assets/images/diffusion.mp4" type="video/mp4">
                     </video>
                 </a>
-                <a href="https://bdml.stanford.edu/uploads/Main/MobileManipulationPubs/ICRA40_FinalSubmission_Preprint.pdf" class="research-proj-title">
-                    Leveraging Non-Prehensile Tactile Data for Object Retraction in Constrained Clutter Using Imitation Learning
+                <a href="https://bdml.stanford.edu/uploads/Main/MobileManipulationPubs/ICRA40_FinalSubmission_Preprint.pdf"
+                    class="research-proj-title">
+                    Leveraging Non-Prehensile Tactile Data for Object Retraction in Constrained Clutter Using Imitation
+                    Learning
                 </a>
                 <p>
-                    <a style="color:#000;" href="https://bdml.stanford.edu/pmwiki/pmwiki.php/Profiles/DaneBrouwer">Dane Brouwer</a>,
+                    <a style="color:#000;" href="https://bdml.stanford.edu/pmwiki/pmwiki.php/Profiles/DaneBrouwer">Dane
+                        Brouwer</a>,
                     <b>Joshua Citron</b>,
                     <a style="color:#000;" href="https://profiles.stanford.edu/mark-cutkosky">Mark Cutkosky</a>
                     <br>
@@ -90,11 +99,13 @@
                     Tactile-Informed Action Primitives Mitigate Jamming in Dense Clutter
                 </a>
                 <p>
-                    <a style="color:#000;" href="https://bdml.stanford.edu/pmwiki/pmwiki.php/Profiles/DaneBrouwer">Dane Brouwer</a>,
+                    <a style="color:#000;" href="https://bdml.stanford.edu/pmwiki/pmwiki.php/Profiles/DaneBrouwer">Dane
+                        Brouwer</a>,
                     <b>Joshua Citron</b>,
                     <a style="color:#000;" href="https://www.hojungchoi.com/">Hojung Choi</a>,
                     <a style="color:#000;" href="https://marionlepert.github.io/">Marion Lepert</a>,
-                    <a style="color:#000;" href="https://bdml.stanford.edu/pmwiki/pmwiki.php/Profiles/MichaelLin">Michael Lin</a>,
+                    <a style="color:#000;"
+                        href="https://bdml.stanford.edu/pmwiki/pmwiki.php/Profiles/MichaelLin">Michael Lin</a>,
                     <a style="color:#000;" href="https://web.stanford.edu/~bohg/">Jeannette Bohg</a>,
                     <a style="color:#000;" href="https://profiles.stanford.edu/mark-cutkosky">Mark Cutkosky</a>
                     <br>
@@ -103,8 +114,8 @@
                     <!-- &nbsp;&nbsp;&bull;&nbsp;&nbsp; -->
                     <!-- <a href="https://youtu.be/7h3SZ3La-oA">Video</a> -->
                 </p>
-            
-        <!-- <div class="divider"></div>
+
+                <!-- <div class="divider"></div>
         <div style="display:flex;flex-direction: column;">
             <h1>Projects</h1>
             <div>
@@ -120,9 +131,9 @@
             </div>
             <div style="clear: both;"></div>
         </div> -->
-    </div>
-    <!-- <script src="js/pixi.min.js"></script> -->
-    <!-- <script src="js/profile-pic.js"></script> -->
+            </div>
+            <!-- <script src="js/pixi.min.js"></script> -->
+            <!-- <script src="js/profile-pic.js"></script> -->
 </body>
 
 </html>
