Added RA-L paper to research section and LinkedIn

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                     <a href="https://github.com/citronCode">
                         Github
                     </a>
+                    /
+                    <a href="https://www.linkedin.com/in/joshua-citron-56a9b5218/">
+                        LinkedIn
+                    </a>
                     </a>
                 </div>
             </div>
@@ -65,6 +69,31 @@
         <div class="divider"></div>
         <div style="display:flex;flex-direction: column;" id="research">
             <h1>Research</h1>
+            <div>
+                <a href="https://arxiv.org/abs/2508.19476" style="height: 14em;" class="research-thumb">
+                    <video width="320" height="auto" autoplay loop muted>
+                        <source src="assets/images/dense_video.mp4" type="video/mp4">
+                    </video>
+                </a>
+                <a href="https://arxiv.org/abs/2508.19476" class="research-proj-title">
+                    Gentle Object Retraction in Dense Clutter Using Multimodal
+                    Force Sensing and Imitation Learning
+                </a>
+                <p>
+                    <a style="color:#000;" href="https://bdml.stanford.edu/pmwiki/pmwiki.php/Profiles/DaneBrouwer">Dane
+                        Brouwer</a>,
+                    <b>Joshua Citron</b>,
+                    <a style="color:#000;" href="https://www.linkedin.com/in/heather-nolte/">Heather
+                        Nolte</a>,
+                    <a style="color:#000;" href="https://web.stanford.edu/~bohg/">Jeannette
+                        Bohg</a>,
+                    <a style="color:#000;" href="https://profiles.stanford.edu/mark-cutkosky">Mark Cutkosky</a>
+                    <br>
+                    <a href="https://arxiv.org/abs/2508.19476">ArXiv</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <!-- &nbsp;&nbsp;&bull;&nbsp;&nbsp; -->
+                    <!-- <a href="https://youtu.be/7h3SZ3La-oA">Video</a> -->
+                </p>
+            </div>
             <div>
                 <a href="https://bdml.stanford.edu/uploads/Main/MobileManipulationPubs/ICRA40_FinalSubmission_Preprint.pdf"
                     style="height: 14em;" class="research-thumb">
